--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,10 +1,11 @@
+
 .header_logo img {
   margin-left: 50px;
   width: 150px;
 }
 
 .contact__form__about__us{
-  width: 350px;
+  width: 30%;
   background-color: rgb(0, 26, 255);
   border-radius: 10px;
   border-top-right-radius: 0;
@@ -16,6 +17,7 @@
 .about__us{
   position: absolute;
   top: 15%;
+  padding: 50px;
 }
 /* .contact__form_about__us__location{
   position: absolute;
@@ -197,15 +199,18 @@
     padding: 8%;
   }
   .contact__form {
-    max-width: 600px;
+    max-width: 70%;
     border-radius: 10px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     padding: 40px;
   }
 
-  /* .close__bttn{
+  .close__bttn{
     width: 100px;
-    he
-  } */
+  }
+  .contact__form__section{
+    margin: auto;
+  }
+
 }
