--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 :root {
   --color-primary: #0000fe;
   --color-white: #ffffff;
@@ -12,7 +12,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: Ubuntu;
+  font-family: Open Sans;
 }
 
 html,
