--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -46,9 +46,14 @@
 .home__choose__us__wrap {
   /* background: url(/assets/img/test_bg.png); */
   padding: 50px 8%;
+  /* background-color: #1E45F5; */
 }
 
 .home__choose__us__item {
+  background-color: white;
+  box-shadow: inset;
+  border-radius: 10px;
+  margin: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,6 +64,9 @@
 }
 
 /* portfolio */
+.Portfolio-head h2{
+  width: 600px;
+}
 
 .home__portfolio__wrap {
   padding: 50px 8%;
@@ -67,10 +75,12 @@
   font-size: 33px;
 }
 .home__portfolio__body{
+  align-self: center;
+  margin: 0;
   width: 60vw;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap:-20px;
+  grid-template-columns: 1fr 1fr;
+  column-gap:100px;
 }
 
 .home__portfolio__item {
@@ -84,9 +94,37 @@
   padding-bottom: 8px;
 }
 .home__portfolio__item > img {
-  height: 300px;
+  max-width: 550px;
+}
+.home__portfolio__item {
+  text-align: left;
+  align-items: flex-start;
+  max-width: 550px;
+  margin: 10px;
+  margin-bottom: 40px;
 }
 
+.home__portfolio__item > p {
+  font-weight: lighter;
+  font-size: 14px;
+  margin: 5px 0px;
+  
+}
+.home__portfolio__item > h3 {
+  font-weight: bolder;
+  font-size: 23px;
+  margin: 5px 0px;
+  color: #0000fe;
+}
+.home__portfolio__item  h3 :hover {
+  color: green;
+}
+.home__portfolio__item > h4 {
+  font-weight: lighter;
+  font-size: 18px;
+  margin: 0px;
+  color: rgb(90, 89, 89);
+}
 
 
 
@@ -147,7 +185,7 @@
 
 .home__service__body {
   display: grid;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .home__service__body > :not(:last-child) {
   border-bottom: 1px solid var(--text-color-dark-tintS);
@@ -175,6 +213,13 @@
 .home__section__work__process__item > img {
   height: 80px;
 }
+.home__section__work__process__item:hover {
+  transform: scale(1.1);
+  /* background-color: #0000fe; */
+  transition-duration: .6s;
+}
+
+
 .home__people__item {
   display: flex;
   align-items: center;
@@ -296,10 +341,10 @@
   .home__service__body > :nth-of-type(odd) {
     border-right: 1px solid var(--color-border);
   }
-  .home__section__work__process__body {
+  /* .home__section__work__process__body {
     grid-template-columns: 1fr 1fr;
     row-gap: 30px;
-  }
+  } */
   .home__section__work__process__body > :nth-of-type(odd) {
     border-right: 1px solid var(--color-border);
   }
@@ -424,4 +469,34 @@
     border-radius: 22.5px;
     padding: 0 39px;}
 
+}
+
+
+/* ~~~~~~~~~~~~~~~~~ STYLE 4 SERICE SECTION ~~~~~~~~~~~~ */
+.container-4-service-grids{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  margin: 0px 100px;
+}
+
+.container-4-service-grids > div {
+  border: 4px solid #efefef;
+  padding: 30px;
+}
+
+
+
+@keyframes raise-bg{
+  0% {background-color: blue; left: 0px; top: 0px;}
+  25% {background-color: blue; left: 20px; top: 0px;}
+  50% {background-color: blue; left: 0px; top: 0px;}
+  75% {background-color: blue; left: 0px; top: 0px;}
+  100% {background-color: blue; left: 0px; top: 0px;}
+}
+
+.service:hover{
+  animation-name: raise-bg;
+  animation-duration: 10s;
+  color: #fff;
 }
