--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -10,9 +10,9 @@
   left: 0;
   width: 100%;
   /* border: 1px solid red; */
-  background: url(../img/bg-02.png);
+  background: url(../img/bg.png);
   background-repeat: no-repeat;
-  height: 650px;
+  height: 700px;
   z-index: -1;
   background-position: bottom;
   background-size: cover;
@@ -91,19 +91,37 @@
   position: fixed;
   z-index: 2;
   top: 0;
-  background: #ffffff;
+  background: transparent;
   box-shadow: 0px 1px 5px #33333528;
 }
 
 .header__phone__number__wrap {
-  display: flex;
+  /* display: flex;
   flex: 1;
-  justify-content: flex-end;
+  justify-content: flex-end; */
+  max-height: 45px;
+  color: white;
 }
 .header__phone__number__wrap > :first-child {
-  margin-right: 20px;
+  /* margin-right: 20px; */
+  padding: px 5px;
+}
+.header__phone__number__wrap > a {
+  /* margin-right: 20px; */
+  color: #ffffff;
+}
+.header__phone__number__wrap {
+  border: 2px solid white;
+  padding: 3px 5px;
+  border-radius: 5px;
 }
 .header__nav {
+}
+.header__nav > a {
+  color: white;
+}
+.header__nav > a:active {
+  color: blue;
 }
 .header__active {
   color: var(--color-primary);
@@ -171,7 +189,7 @@
   }
   .header__nav {
     display: flex;
-    flex: 1;
+    /* flex: 1; */
     margin-left: 40px;
   }
   .header__nav div {
