--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Readex+Pro');
+@import url('https://fonts.googleapis.com/css?family=Inter');
 :root {
   --color-primary: #0000fe;
   --color-white: #ffffff;
