--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -42,8 +42,13 @@
 .blog__first__image {
   width: 100%;
   height: 200px;
-  background: url(../img/blog_pic.jpg);
   background-size: cover;
+}
+
+.post-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .blog__date__time {
   display: flex;
