--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -43,16 +43,17 @@
   top: 0;
   left: 0;
   width: 100%;
-  background: url(../img/about-us.png);
+  /* background: url(../img/about-us.png); */
   height: 500px;
   z-index: -1;
 }
-
+/* come here */
 .header__bg__layer__about::after {
   content: " ";
-  background-color: rgba(0, 0, 0, 0.7);
+  /* background-color: #102792; */
+  background-image: url(/assets/img/bg.png);
   width: 100%;
-  height: 100%;
+  height: 20%;
   position: absolute;
   top: 0;
   left: 0;
@@ -71,7 +72,8 @@
 
 .header__bg__layer__blog::after {
   content: " ";
-  background-color: rgba(0, 0, 0, 0.7);
+  /* background-color: rgba(0, 0, 0, 0.7); */
+  background-image: url(/assets/img/bg.png);
   width: 100%;
   height: 100%;
   position: absolute;
