--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,10 +1,15 @@
-.banner__grid{
-  margin: 0 100px;
+
+.about__m8{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-  gap: 10px;
+  justify-content: space-evenly;
+}
+.headings{
+  font-family: Readex Pro ;
+  font-size: 30px;
+  font-weight: bolder;
+  width: fit-content;
+  margin: 10px auto;
+  color: rgb(20, 19, 19);
 }
 .partners__banner{
   padding: 10px 200px;
