--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -4,15 +4,17 @@
   color: #ffffff;
   font-size: 16px;
   font-weight: 500;
-  background-color: #0000fe;
+  background-color: #112791;
   box-shadow: 2px 2px 15px rgba(0, 0, 254, 0.2);
   font-family: inherit;
   border-radius: 5px;
   border: none;
   outline: none;
   cursor: pointer;
+  font-family: Readex Pro;
 }
 
 .button:hover {
-  background-color: #01018a;
+  font-family: Readex Pro;
+  background-color: blue;
 }
