--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -751,3 +751,26 @@
 .grid__brands img{
   max-height: 150px;
 }
+
+
+.contact{
+  position: fixed;
+  bottom: 10px;
+  right: 40px;
+  width: fit-content;
+  height: fit-content;
+}
+.contact button{
+  background: #112791;
+  border: none;
+  margin: 0;
+  border: 2px solid white;
+  border-radius: 50%;
+}
+.contact button:hover{
+  cursor: pointer;
+  background: blue;
+}
+.contact button svg{
+  padding: 5px;
+}
