--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -93,7 +93,8 @@
   position: fixed;
   z-index: 2;
   top: 0;
-  background: transparent;
+  /* background: transparent; */
+  background-color: #112791;
   box-shadow: 0px 1px 5px #33333528;
 }
 
