--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,19 +3,19 @@
   height: 100px;
   position: relative;
 }
-
-.header__bg__layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+.home__hero__wrap{
+  /* height: fit-content; */
+}
+.hero-bg {
+  /* position: relative; */
+  
   /* border: 1px solid red; */
   background: url(../img/bg.png);
   background-repeat: no-repeat;
-  height: 700px;
+  height: 100vh;
   z-index: -1;
-  background-position: bottom;
-  background-size: cover;
+  /* background-position: bottom; */
+  /* background-size: cover; */
 }
 
 .header__bg__layer__contact {
@@ -47,6 +47,7 @@
   height: 500px;
   z-index: -1;
 }
+
 /* come here */
 .header__bg__layer__about::after {
   content: " ";
@@ -72,16 +73,17 @@
 
 .header__bg__layer__blog::after {
   content: " ";
-  /* background-color: rgba(0, 0, 0, 0.7); */
+  /* background-color: #102792; */
   background-image: url(/assets/img/bg.png);
   width: 100%;
-  height: 100%;
+  height: 20%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
 }
 .header__body {
+  
   width: 100%;
   height: 100px;
   box-shadow: 0px 1px 5px #33333528;
@@ -90,14 +92,29 @@
   justify-content: space-between;
   padding: 0px 20px;
   box-sizing: border-box;
-  position: fixed;
+  /* position: fixed; */
   z-index: 2;
   top: 0;
   /* background: transparent; */
-  background-color: #112791;
+  /* background-color: #112791; */
   box-shadow: 0px 1px 5px #33333528;
 }
 
+.background-header{
+  position: fixed ;
+  background-image: url(/assets/img/bg.png);
+  /* background-position: center; */
+  /* background-size: cover; */
+  background-repeat: no-repeat;
+  transition: .8s ease-in;
+}
+.header-position{
+  position: fixed ;
+  background-image: url(/assets/img/bg.png);
+  transition: 2s ease-in;
+  height: inherit;
+
+}
 .header__phone__number__wrap {
   /* display: flex;
   flex: 1;
@@ -152,13 +169,13 @@
   .header__ham.active .nav-bar:nth-child(3) {
     transform: translateY(-0.8rem) rotate(-45deg);
     width: 2rem;
-    background-color: #0000fe;
+    background-color: #ffffff;
   }
 
   .header__nav {
     width: 100%;
-    background-color: #fffdfd;
-
+    background-image: url(/assets/img/bg.png);
+    z-index: 1;
     transition: color 200ms ease-in 50ms;
     display: none;
   }
