--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,7 @@
 .home__hero__wrap {
   /* display: flex; */
   padding: 70px 8%;
-  height: 100vh;
+  /* height: 100%; */
 }
 .header_logo img {
   margin-left: 50px;
@@ -184,7 +184,9 @@
 }
 .home__section__work__process {
   background: url(/assets/img/work_process.png);
-  height: 80vh;
+  height: fit-content;
+  padding: 30px 80px;
+
 }
 .home__section__work__process img{
   height: 80%;
@@ -229,9 +231,9 @@
 }
 .work__process__content{
   padding: 20px 10px;
-  padding-bottom: 50px;
-  margin: 50px 10%;
-  display: grid;
+  padding-bottom: px;
+  margin: 20px ;
+  display:flex;
   gap: 20%;
   grid-template-columns: 1fr 1fr;
   /* justify-content: space-between; */
