--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@ body {
 .nav-bar {
   width: 30px;
   height: 5px;
-  background-color: #0000fe;
+  background-color: #f9f9f9;
   border-radius: 3px;
   padding: 0px;
   margin: 0px;
