--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,7 +1,6 @@
 .home__hero__wrap {
   /* display: flex; */
   padding: 70px 8%;
-  /* height: 100%; */
 }
 .header_logo img {
   margin-left: 50px;
@@ -12,14 +11,25 @@
   /* padding: 50px 0px; */
 
 }
-.home__hero__text > h1{
+.home__hero__text div{
+  /* margin-top: 120px; */
+  padding: 30px 30px;
+  background-color: #112591;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  height: fit-content;
+}
+.home__hero__text div > h1{
   color: var(--color-white);
   font-family: Readex Pro;
   font-weight: bolder;
-  font-size: 80px !important;
+  font-size: 45px !important;
   margin: 0px;
+  color: white;
+  text-align: center;
 }
-.home__hero__text > p {
+.home__hero__text div > p {
   color: var(--color-white);
   font-family: Inter;
   font-size: 28px;
@@ -29,24 +39,19 @@
 .home__hero__text > button {
   display: flex;
   align-items: center;
-  margin: 50px;
-  background: none;
-  border: 2px solid white;
-  color: white;
-  padding: 5px 10px;
+  margin: 50px auto;
+  background: orange;
+  color: black;
+  padding: 10px 30px;
   border-radius: 5px;
+  border: none;
   font-size: 20px;
-  font-family: Inter;
   font-weight: lighter;
 }
-.home__hero__text > button > svg{
+/* .home__hero__text div > button > svg{
   height: 30px;
-}
+} */
 
-
-.home__hero__text > h1 {
-  font-size: 48px;
-}
 
  .home__hero__button {
   width: 237px;
