--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -32,7 +32,7 @@
   width: 100%;
   background: url(../img/bg.png);
   background-repeat: no-repeat;
-  height: 700px;
+  height: 100vh;
   z-index: -1;
   background-position: bottom;
   background-size: cover;
