--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -84,7 +84,7 @@
 
 .home__portfolio__wrap {
   padding: 50px 8%;
-  background: #eeeef5;
+  /* background: #eeeef5; */
 }
 .home__portfolio__wrap h2{
   font-size: 33px;
@@ -588,11 +588,9 @@
 
 .container-4-service-grids > div {
   /* border: 4px solid #efefef; */
-  padding: 30px;
+  padding: 5px;
 }
-.service > h1{
-  color: rgb(233, 230, 230);
-}
+
 .services__heading h2{
   font-family: Readex Pro;
   font-size: 50px;
@@ -615,13 +613,22 @@
   height: 330px;
   position: relative;
   border: 1px solid #EFEFEF;
-  background: url(/assets/img/drug.png);
-
 }
 .service h1{
   font-family: Readex Pro;
   font-weight: bolder;
   font-size: 28px;
+}
+.service >img{
+  width: 250px;
+  height: 250px;
+}
+.service > h1{
+  color: black;
+  margin-bottom: 0;
+}
+.service > h3{ 
+  margin-top: 3px;
 }
 .reverse_colors {
 
@@ -707,7 +714,6 @@
 .services{
   /* border: 1px solid black; */
   align-content: center;
-  width: 70%;
   text-align: center;
 }
 .services:hover{
@@ -727,7 +733,7 @@
   margin: 0;
 }
 .services img{
-  width: 40%;
+  width: 60%;
   height: 100px;
 }
 .find__more__button button{
@@ -818,4 +824,9 @@
   font-weight: bolder;
   font-size: 70px !important;
   margin: 0px;
+}
+
+
+.__work__process{
+
 }
