--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -25,12 +25,12 @@
 .header__nav__pro{
   color: black;
 }
-.header__bg__layer {
+.header__bg__layery {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  background: url(../img/bg.png);
+  /* background: url(../img/bg.png); */
   background-repeat: no-repeat;
   height: 100vh;
   z-index: -1;
@@ -47,13 +47,23 @@
 }
 .hero-bg {
   /* position: relative; */
-  /* background: url(../img/bg.png); */
+  background: url(../img/bgs/hero.svg);
   /* background: blue; */
   background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
   height: fit-content;
   z-index: -1;
 
 }
+
+/* .h-regular{
+  background: url(../img/bgs/hero.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  height: fit-content;
+} */
 
 .header__bg__layer__contact {
   position: absolute;
@@ -75,14 +85,16 @@
   left: 0;
   z-index: 1;
 }
-.header__bg__layer__about {
+.h-regular {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  /* background: url(../img/about-us.png); */
-  height: 500px;
+  /* background: url(../img/bgs/hero.svg); */
+  height: 80px;
   z-index: -1;
+  box-shadow: 0.5px 0.5px 5px #d5d4d4, -0.5px -0.5px 5px #dcdada;
+
 }
 
 /* come here */
@@ -123,7 +135,7 @@
   
   width: 100%;
   height: 80px;
-  box-shadow: 0px 1px 5px #33333528;
+  /* box-shadow: 0px 1px 5px #33333528; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -133,25 +145,34 @@
   z-index: 2;
   top: 0;
   background: transparent;
-<<<<<<< HEAD
-=======
   /* background-color: #112791; */
->>>>>>> e10c4856799cbeb58eb5b6f27d9ff588651f5f28
-  box-shadow: 0px 1px 5px #33333528;
+  /* box-shadow: 0px 1px 5px #33333528; */
 }
 
-.background-header{
-  height: 10%;
-  position: fixed ;
-  background: #112791;
-  background-repeat: no-repeat;
-  transition: .8s ease-in;
+.background-header .header__nav > a,.header-position .header__nav > a{
+   color: #112791;
 }
+.background-header .header_logo{
+  background-color: blue;
+}
+.background-header{
+  /* height: 10%; */
+  position: fixed ;
+  background: #ffffff;
+  background-repeat: no-repeat;
+  transition: .6s ease-in;
+  color: blue;
+  box-shadow: 0.5px 0.5px 5px #d5d4d4, -0.5px -0.5px 5px #dcdada;
+
+}
+
 .header-position{
   position: fixed ;
-  background-image: url(/assets/img/bg.png);
-  transition: 2s ease-in;
-  height: inherit;
+  background: #ffffff;
+  background-repeat: no-repeat;
+  transition: .6s ease-in;
+  color: blue;
+  box-shadow: 0.5px 0.5px 5px #d5d4d4, -0.5px -0.5px 5px #dcdada;
 
 }
 .header__phone__number__wrap {
@@ -175,9 +196,10 @@
   border-radius: 5px;
 }
 .header__nav {
+  align-items: center;
 }
 .header__nav > a {
-  color: rgba(255, 255, 255, 0.653);
+  color: rgb(255, 255, 255);
 }
 .header__nav > a:active {
   color: blue;
@@ -213,7 +235,7 @@
 
   .header__nav {
     width: 100%;
-    background-image: url(/assets/img/bg.png);
+    /* background-image: url(/assets/img/bgs/hero.svg); */
     z-index: 1;
     transition: color 200ms ease-in 50ms;
     display: none;
